# dominus

./: .gitignore  .travis.yml  Makefile.am  README  README.md  common.mk  configure.ac
BE/: Makefile  ReadMe.md  client.c  serveur.c  switchOnOff.c  switchOnOff.h
BE/RPI1_serveur_avec_LED/: S99dominus_serveur  dominus_serveur
BE/RPI2_client_domoticz/: dominus_client
BE/RPI2_client_domoticz/scripts/: switchOff.sh  switchOn.sh
ansible/: hosts  playbook.yml
central/src/ino/: cc1101_rx.ino
docker/: Dockerfile  defconfig  run.sh
docker/nanopi/: Dockerfile  defconfig  docker.sh  linux_defconfig  users.tables
docker/nanopi/patches/: enable-sun8i-emac-on-the-nanopi-neo.patch  sun8i-emac-thermal-cpufreq.patch.disable
docker/nanopi/wiringpinp/: Config.in  boardtype.patch  devlib.patch  gpio.patch  wiringpi.patch  wiringpinp.mk
docker/rpi3/: Dockerfile  defconfig  docker.sh
docs/: dominus.cfg
dominus-central/bsp/: README.md  build.sh
dominus-central/bsp/conf/: bblayers.conf  local.conf
dominus-central/bsp/meta-dominus/conf/: layer.conf
dominus-central/bsp/meta-dominus/conf/distro/: dominus.conf
dominus-central/bsp/meta-dominus/recipes-bsp/bootfiles/: rpi-config%.bbappend
dominus-central/bsp/meta-dominus/recipes-core/images/: dominus-image.bb
dominus-central/bsp/meta-dominus/recipes-core/systemd-conf/: systemd-conf_%.bbappend
dominus-central/bsp/meta-dominus/recipes-core/systemd-conf/files/: 10-en.network  system.conf
dominus-central/bsp/meta-dominus/recipes-dominus/dominusd/: dominusd.bb  dominusd.bbappend
dominus-central/bsp/meta-dominus/recipes-dominus/dominusd/files/: dominusd.service
dominus-central/bsp/scripts/: build.sh  clone.sh  mount-boot  mount-rfs
dominus-central/src/: cc1101_rx.ino  dominusd.py
dominus-central/src/ino/: cc1101_rx.ino
dominus-gate/src/: cc1101_tx.ino
examples/: Makefile.am  README.md
gate/src/ino/: cc1101_tx.ino
ledSwitch/: Makefile  README.md  TODO
ledSwitch/doc/: README.md
ledSwitch/src/: client.c  client.conf  server.c
ledSwitch/src/lib/gpio/: gpio.c  gpio.h  test.c
scripts/: Makefile.am  README.md  S101dominus  dominus.cfg  logging  profile.sh  qemu_up.sh  switch_off.sh  switch_on.sh  syslog.conf
src/: Makefile.am
src/app/: Makefile.am  README.md  main_client.c  main_server.c
src/apps/: Makefile.am
src/apps/client/: Makefile.am  client.cpp
src/apps/server/: Makefile.am  dominus.cpp  server.cpp
src/domoticz/: Makefile.am  README.md  domoticz_create_assign.cpp
src/domoticz/scripts/: Makefile  S98server  switch0_off.sh  switch0_on.sh
src/domoticz_create_assign/: Makefile.am
src/lib/: Makefile.am
src/lib/devices/: Makefile.am
src/lib/devices/bme280/: Makefile.am  bme280.cpp  bme280.hpp
src/lib/devices/device/: Makefile.am  config.cpp  config.hpp  data.hpp  device.cpp  device.hpp
src/lib/devices/dht11/: Makefile.am  dht11.cpp  dht11.hpp
src/lib/devices/gpio/: Makefile.am  gpio.cpp  gpio.hpp
src/lib/domoticz/: Makefile.am  domoticz.cpp  domoticz.hpp
src/lib/gpio/: Makefile.am  README.md  gpio_switch.c  gpio_switch.h
src/lib/logger/: Makefile.am  logger.cpp  logger.hpp
src/lib/net/: Makefile.am  client.cpp  client.hpp  server.cpp  server.hpp  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
src/lib/tcp/: README.md
src/scripts/: dominus  dominus.sh
